--- a/bootcamp-react-movies/package.json
+++ b/bootcamp-react-movies/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.0",
+    "react-toastify": "^9.1.3",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
